src/scss/main.scss
@import './global_variables';
@import './components/index';
@import './profiles/index';
@import './tournaments/index';

body {
    margin: 0;
    font-family: $font1;
    overflow-x: hidden;
}

iframe {
    max-width: 100%;
}

a {
    color: inherit;
    text-decoration: none;
    cursor: pointer;

    &:hover {
        color: $faded-blue !important;
    }
}

.sp-input {
    border-radius: 3px;
    padding: .75em 1em;
    border: 1px solid grey;
    width: 200px;
    outline: none;

    &:focus {   
        border: 1px solid $faded-blue;
    }
    @media (max-width: $medium) {
        width: 95%;
    }

    &--maintain-width {
        @media (max-width: $medium) {
            width: 200px;
        }
    }
}

.subtitle {
    font-size: $subtitleSize;
    text-align: center;
    font-weight: 500;

    &--rule{
        margin: .9em 0;
        min-width: 150px;
        text-align: left;

        @media (max-width: $medium){
            margin-bottom: 0;
        }
    }
}

.underline{
    text-decoration: underline;
}

.capitalize {
    text-transform: capitalize;
}

.validation-error {
    display: none;
    color: $faded-red;
    font-size: 12px;
}

